--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -48,3 +48,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: go build -v main.go
+
+  docker:
+    nedds: build
+    usus: ./.github/workflows/Docker.yml
