--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -50,5 +50,5 @@ jobs:
       run: go build -v main.go
 
   docker:
-    nedds: build
-    usus: ./.github/workflows/Docker.yml
+    needs: build
+    uses: ./.github/workflows/Docker.yml
