--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -14,3 +14,11 @@ jobs:
       uses: docker/setup-buildx-action@v2.5.0
       
       
+    - name: Docker Login
+      uses: docker/login-action@v2.1.0
+      with:
+        username: MatheuslFavaretto
+        password: ${{ secrets.PASSWORD_DOCEKR_HUB  }}
+
+      
+      
