--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -15,8 +15,11 @@ jobs:
       
       
     - name: Docker Login
-      uses: docker/login-action@v2.1.0
+  # You may pin to the exact commit or the version.
+  # uses: docker/login-action@49ed152c8eca782a232dede0303416e8f356c37b
+      uses: docker/login-action@v2.0.0
       with:
+    # Username used to log against the Docker registry
         username: MatheuslFavaretto
         password: ${{ secrets.PASSWORD_DOCEKR_HUB  }}
 
