--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -10,14 +10,13 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Setup Docker Build
-      uses: docker/setup-buildx-action@v2.5.0
-      
+    - name: setup Docker Build
+      uses: docker/setup-buildx-action@v2.0.0
       
     - name: Docker Login
   # You may pin to the exact commit or the version.
   # uses: docker/login-action@49ed152c8eca782a232dede0303416e8f356c37b
-      uses: docker/login-action@v2.0.0
+      uses: docker/login-action@v2.1.0
       with:
     # Username used to log against the Docker registry
         username: MatheuslFavaretto
