--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -14,12 +14,19 @@ jobs:
       uses: docker/setup-buildx-action@v2.0.0
       
     - name: Docker Login
-  # You may pin to the exact commit or the version.
-  # uses: docker/login-action@49ed152c8eca782a232dede0303416e8f356c37b
       uses: docker/login-action@v2.1.0
       with:
         username: ${{ secrets.USERNAME_DOCEKR_HUB  }}
         password: ${{ secrets.TOKEN_ACESSS_DOCEKR_HUB  }}
+        
+    - name: Build and push Docker images
+
+      uses: docker/build-push-action@v4.0.0
+      with:
+        context: .
+        file: ./Dockerfilçe
+        push: true
+        tags: matheuslfavaretto/go_ci:${{github.ref_name}}
 
       
       
