--- a/.github/workflows/EC2.yml
+++ b/.github/workflows/EC2.yml
@@ -38,6 +38,6 @@ jobs:
           export DBPORT=${{ secrets.DBPORT }}
           export PORT=8000
           chmod +x main
-          nohup ./main &
+          nohup ./main > nohup.out 2> nohup.err < /dev/null &
 
 
