--- a/.github/workflows/EC2.yml
+++ b/.github/workflows/EC2.yml
@@ -1,14 +1,16 @@
-name: Entrega Continua
+name: Deploy EC2
 
 on:
-  workflow_call:
+  push:
+    branches:
+      - main
 
 jobs:
-  EC2:
+  deploy_ec2:
     runs-on: ubuntu-latest
-    
     steps:
       - uses: actions/checkout@v3
+      
       - name: Download a Build Artifact
         uses: actions/download-artifact@v2.1.1
         with:
